# POLARIS_GEM_e2

./: .gitattributes  .gitignore  README.md
basic_launch/launch/: camera_controller.launch  dbw_joystick.launch  pacmod2.launch  visualization.launch  visualization_control.launch  visualization_wrapper.launch
platform_launch/launch/black_e4/: dbw_joystick.launch  platform.launch  visualization_sensors.launch
platform_launch/launch/brandi/: dbw_joystick.launch  platform.launch  visualization_sensors.launch
platform_launch/launch/core/: all_supported_drivers.launch  all_supported_drivers.launch.orig
platform_launch/launch/white_e2/: platform.launch  visualization_sensors.launch
platform_launch/rviz/: camera_controller.rviz  camera_gem_vision.rviz  white_e2.rviz
polaris_gem_drivers_sim/gem_pure_pursuit_sim/: CMakeLists.txt  package.xml
polaris_gem_drivers_sim/gem_pure_pursuit_sim/launch/: demo_lane_centering_mock.launch
polaris_gem_drivers_sim/gem_pure_pursuit_sim/nodes/: pure_pursuit_lane_centering.py  pure_pursuit_lane_detect_mock.py
polaris_gem_drivers_sim/gem_pure_pursuit_sim/scripts/: pure_pursuit_sim.py
polaris_gem_drivers_sim/gem_stanley_sim/: CMakeLists.txt  package.xml
polaris_gem_drivers_sim/gem_stanley_sim/launch/: demo_lane_centering_lanenet.launch  demo_lane_centering_mock.launch
polaris_gem_drivers_sim/gem_stanley_sim/nodes/: lane_detect_mock.py  stanley_lane_centering.py  stanley_lane_detect_mock.py
polaris_gem_drivers_sim/gem_stanley_sim/scripts/: stanley_sim.py
polaris_gem_drivers_sim/gem_stanley_sim/waypoints/: wps.csv
polaris_gem_experiments/data-analysis/: .gitignore  apply_lanenet_bag_image_to_lane.py  compute_approx.py  convert_bag_to_pickle.py  convert_bag_to_video.py  group_estimations_by_truth.py  group_samples_by_truth.py  modify_bag_image_to_lane.py  run_collect_images_w_groundtruth.bash  run_sim_traces_montecarlo.bash
polaris_gem_experiments/data-analysis/truths_configs/: 1000_truths-truncated_normal-1.2m-pi_12.yaml  100_truths-uniform-1.2m-pi_12.yaml  100_truths-uniform-1.2m-pi_6.yaml  100_truths-uniform-pi_12-1.2m.yaml  100_truths-uniform-pi_6-1.2m.yaml  121_truths-evenly_spaced_11x11-1.2m-pi_12.yaml  121_truths-evenly_spaced_11x11-pi_12-1.2m.yaml  160_truths-partitioned_uniform_4x4-1.2m-pi_60.yaml  24000_truths-partitioned_uniform_40x40-1.2m-pi_12.yaml  25_truths-evenly_spaced_5x5-Keyur.yaml  36_truths-evenly_spaced_6x6-Keyur.yaml  800_truths-partitioned_uniform_4x20-1.2m-pi_12.yaml  gen_config_truths.py  truths-evenly_spaced-Keyur-6x6.yaml  truths-uniform-pi_6-1.2m-100.yaml
polaris_gem_experiments/gem_scenario_runner/: CMakeLists.txt  README.md  package.xml  setup.py
polaris_gem_experiments/gem_scenario_runner/configs/: example-5.truths.yaml
polaris_gem_experiments/gem_scenario_runner/launch/: collect_images_w_truths.launch  sim_traces_montecarlo.launch  sim_traces_montecarlo_one_curved_road.launch
polaris_gem_experiments/gem_scenario_runner/nodes/: set_pose_three_100m_straight_roads.py  set_scene_three_100m_straight_roads.py  set_scenes.py  sim_trace_one_100m_curved_road.py  sim_trace_three_100m_straight_roads.py
polaris_gem_experiments/gem_scenario_runner/src/: gem_scenario_runner.py
polaris_gem_experiments/gem_scenario_runner/worlds/: one_100m_left_curved_road.world  three_100m_straight_roads.world
polaris_gem_experiments/prog-analysis/: lane_centering_pure_pursuit.py  run-cbmc.bash  stanley_lane_centering.py
polaris_gem_experiments/prog-analysis/include/: approx_real.cbmc.h  approx_real.h
polaris_gem_experiments/prog-analysis/lane_centering_pure_pursuit/: derive_min_dist.py  lane_centering_pure_pursuit.h  lane_centering_pure_pursuit.py  main.c
polaris_gem_experiments/prog-analysis/lane_centering_stanley/: derive_min_dist.py  lane_centering_stanley.h  lane_centering_stanley.py  (+1 more)
polaris_gem_lane_detect_sim/gem_lane_detect_msgs/: CMakeLists.txt  package.xml
polaris_gem_lane_detect_sim/gem_lane_detect_msgs/msg/: SimpleLane.msg  SimpleLaneStamped.msg
polaris_gem_lane_detect_sim/gem_lanenet/: README.md  package.xml  requirements.txt
polaris_gem_lane_detect_sim/gem_lanenet/lanenet_weights/: README.md
polaris_gem_lane_detect_sim/gem_lanenet/launch/: demo_find_perspective_transform.launch  demo_lane_detection.launch  spawn_find_perspective_transform_node.launch  spawn_lanenet_node.launch
polaris_gem_lane_detect_sim/gem_lanenet/nodes/: find_perspective_transform.py  gem_odom_tf2_broadcaster.py  lanenet_node.py
polaris_gem_lane_detect_sim/gem_lanenet/rviz/: gem_lanenet_rviz.rviz
polaris_gem_lane_detect_sim/gem_lanenet/src/gem_lanenet/: lanenet_w_line_fit.py  perspective_utils.py
polaris_gem_lane_detect_sim/gem_lanenet/test/: test_lanenet_w_line_fit.py
polaris_gem_perception_sim/gem_lanenet/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
polaris_gem_perception_sim/gem_lanenet/configs/: conf_polaris_gem.lanenet.yaml
polaris_gem_perception_sim/gem_lanenet/launch/: spawn_lanenet_node.launch
polaris_gem_perception_sim/gem_lanenet/nodes/: lanenet_node.py
polaris_gem_perception_sim/gem_lanenet/rviz/: gem_lanenet_rviz.rviz
polaris_gem_perception_sim/gem_lanenet/src/gem_lanenet/: line_fit.py
vehicle_drivers/: readme.txt
vehicle_drivers/gem_description/: package.xml
vehicle_drivers/gem_pcl/: CMakeLists.txt  package.xml
vehicle_drivers/gem_pcl/launch/: gem_pcl.launch
vehicle_drivers/gem_pcl/src/: gem_velodyne.cpp
vehicle_drivers/gem_rviz_markers/: package.xml
vehicle_drivers/gem_steering_control/: CMakeLists.txt  package.xml
vehicle_drivers/gem_steering_control/launch/: frontal_wheel_test.launch
vehicle_drivers/gem_steering_control/scripts/: front_steering_control.py  frontal_wheel_test.py  gem_vehicle_control.py  steering_controller.py  steering_wheel_disable.py  steering_wheel_rotation.py  steering_wheel_rotation_keyboard.py  steering_wheel_test.py
vehicle_drivers/gem_steering_control/scripts/reference/: controller_w_dm.py  pid_controller.py  pid_speed_steer_ctl (copy).py  pid_speed_steer_ctl.py
vehicle_drivers/gem_vision/: CMakeLists.txt  package.xml
(+61 files in other folders)
