<?xml version="1.0"?>
<package format="2">
  <name>gem_steering_control</name>
  <version>0.0.0</version>
  <description>The gem_steering_control package</description>
  
  <maintainer email="dev@todo.todo">dev</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
